updated readme and added link to champion.gg

--- a/public/index.html
+++ b/public/index.html
@@ -375,7 +375,7 @@
                                             </div>
                                         </div>
                                         <div class="col s12 valign-wrapper set-info-form-label-container">
-                                            <h5 class="valign set-info-form-label">Choose Build From Champion.gg</h5>
+                                            <h5 class="valign set-info-form-label">Choose Build From <a href="http://champion.gg/">Champion.gg</a></h5>
                                         </div>
                                         <div class="col s12 valign-wrapper set-info-form-label-container build-type-form">
                                             <form action="#">
