fixed some style issues, updated version, champion selection works from presets

--- a/public/index.html
+++ b/public/index.html
@@ -34,14 +34,14 @@
     <!-- item-set-builder -->
 
     <!-- un-minified -->
-    <script src="js/src/globals.js"></script>
+    <!-- <script src="js/src/globals.js"></script>
     <script src="js/src/item-block.js"></script>
     <script src="js/src/buttons.js"></script>
     <script src="js/src/drag-and-drop.js"></script>
-    <script src="js/src/items-and-set.js"></script>
+    <script src="js/src/items-and-set.js"></script> -->
 
-    <!-- minified
-    <script src="js/bildr-min-0.1.2.js"></script> -->
+    <!-- minified -->
+    <script src="js/bildr-min-0.2.1.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- favicon -->
