updated html title

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Item Set Builder</title>
+    <title>bildr &mdash; Item Set Builder</title>
 
     <!-- JQuery -->
     <script src="js/libraries/jquery.js"></script>
