major refactoring of CSS

--- a/public/index.html
+++ b/public/index.html
@@ -5,30 +5,30 @@
     <title>bildr &mdash; Item Set Builder</title>
 
     <!-- JQuery -->
-    <script src="js/libraries/jquery.js"></script>
+    <script src="js/lib/jquery.js"></script>
 
     <!-- JQuery UI -->
-    <script src="js/libraries/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="styles/jquery-ui.min.css">
+    <script src="js/lib/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="styles/lib/jquery-ui.min.css">
 
     <!-- JQuery TagIt -->
-    <script src="js/libraries/tag-it.min.js"></script>
-    <link rel="stylesheet" href="styles/jquery.tagit.css">
+    <script src="js/lib/tag-it.min.js"></script>
+    <link rel="stylesheet" href="styles/lib/jquery.tagit.css">
 
     <!-- JQuery File Upload -->
-    <script src="js/libraries/jquery.iframe-transport.js"></script>
-    <script src="js/libraries/jquery.fileupload.js"></script>
+    <script src="js/lib/jquery.iframe-transport.js"></script>
+    <script src="js/lib/jquery.fileupload.js"></script>
 
     <!-- Charts -->
     <script src="http://cdn.zingchart.com/zingchart.min.js"></script>
 
     <!-- OpenTip-->
-    <script src="js/libraries/opentip-jquery.min.js"></script>
-    <link rel="stylesheet" href="styles/opentip.css">
+    <script src="js/lib/opentip-jquery.min.js"></script>
+    <link rel="stylesheet" href="styles/lib/opentip.css">
 
     <!-- Materialize-->
-    <script src="js/libraries/materialize.min.js"></script>
-    <link rel="stylesheet" href="styles/materialize.min.css">
+    <script src="js/lib/materialize.min.js"></script>
+    <link rel="stylesheet" href="styles/lib/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <!-- item-set-builder -->
@@ -38,11 +38,20 @@
     <script src="js/src/item-block.js"></script>
     <script src="js/src/buttons.js"></script>
     <script src="js/src/drag-and-drop.js"></script>
-    <script src="js/src/items-and-set.js"></script> -->
+    <script src="js/src/items-and-set.js"></script>
+    <link rel="stylesheet" href="styles/all-items.css">
+    <link rel="stylesheet" href="styles/filter.css">
+    <link rel="stylesheet" href="styles/item-blocks.css">
+    <link rel="stylesheet" href="styles/menu.css">
+    <link rel="stylesheet" href="styles/modals.css">
+    <link rel="stylesheet" href="styles/presets.css">
+    <link rel="stylesheet" href="styles/set-info.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/tabs.css">-->
 
     <!-- minified -->
     <script src="js/bildr-min-0.2.1.js"></script>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/bildr-min-0.2.1.css">
 
     <!-- favicon -->
     <link rel="icon" href="../images/gold.png" type="image/png"/>
