forgot about fonts

--- a/public/README.html
+++ b/public/README.html
@@ -6,11 +6,11 @@
     <title>README</title>
 
     <!-- JQuery -->
-    <script src="js/libraries/jquery.js"></script>
+    <script src="js/lib/jquery.js"></script>
 
     <!-- Materialize-->
-    <script src="js/libraries/materialize.min.js"></script>
-    <link rel="stylesheet" href="styles/materialize.min.css">
+    <script src="js/lib/materialize.min.js"></script>
+    <link rel="stylesheet" href="styles/lib/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <style>
