--- a/public/index.html
+++ b/public/index.html
@@ -38,20 +38,20 @@
     <script src="js/src/item-block.js"></script>
     <script src="js/src/buttons.js"></script>
     <script src="js/src/drag-and-drop.js"></script>
-    <script src="js/src/items-and-set.js"></script>
-    <link rel="stylesheet" href="styles/all-items.css">
-    <link rel="stylesheet" href="styles/filter.css">
-    <link rel="stylesheet" href="styles/item-blocks.css">
-    <link rel="stylesheet" href="styles/menu.css">
-    <link rel="stylesheet" href="styles/modals.css">
-    <link rel="stylesheet" href="styles/presets.css">
-    <link rel="stylesheet" href="styles/set-info.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/tabs.css">-->
+    <script src="js/src/items-and-set.js"></script>-->
+    <!-- <link rel="stylesheet" href="styles/src/all-items.css">
+    <link rel="stylesheet" href="styles/src/filter.css">
+    <link rel="stylesheet" href="styles/src/item-blocks.css">
+    <link rel="stylesheet" href="styles/src/menu.css">
+    <link rel="stylesheet" href="styles/src/modals.css">
+    <link rel="stylesheet" href="styles/src/presets.css">
+    <link rel="stylesheet" href="styles/src/set-info.css">
+    <link rel="stylesheet" href="styles/src/styles.css">
+    <link rel="stylesheet" href="styles/src/tabs.css">-->
 
     <!-- minified -->
     <script src="js/bildr-min-0.2.1.js"></script>
-    <link rel="stylesheet" href="styles/bildr-min-0.2.1.css">
+    <!-- <link rel="stylesheet" href="styles/bildr-min-0.2.1.css">-->
 
     <!-- favicon -->
     <link rel="icon" href="../images/gold.png" type="image/png"/>
