avoiding potential merge conflict

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
     <script src="js/src/item-block.js"></script>
     <script src="js/src/buttons.js"></script>
     <script src="js/src/drag-and-drop.js"></script>
-    <script src="js/src/items-and-set.js"></script>-->
-    <!-- <link rel="stylesheet" href="styles/src/all-items.css">
+    <script src="js/src/items-and-set.js"></script>
+    <link rel="stylesheet" href="styles/src/all-items.css">
     <link rel="stylesheet" href="styles/src/filter.css">
     <link rel="stylesheet" href="styles/src/item-blocks.css">
     <link rel="stylesheet" href="styles/src/menu.css">
