--- a/public/index.html
+++ b/public/index.html
@@ -226,8 +226,7 @@
                                             <div class="filter-form-title grey darken-4">Filter Items</div>
                                             <div class="form-body">
                                                 <p>
-                                                    <input type="checkbox" id="All Items" />
-                                                    <label for="All Items">All Items</label>
+                                                    <a class="waves-effect waves-light btn grey" id="all-items-button"><i class="material-icons left">list</i>All Items</a>
                                                 </p>
                                                 <p>
                                                     <input type="checkbox" id="Starting Items" />
