readme/about changes and typo correction

--- a/public/README.html
+++ b/public/README.html
@@ -35,34 +35,7 @@
 <body id="preview">
     <div class="grey-text text-lighten-3">
         <h1 class="thin"><a id="bildr_0"></a>bildr</h1>
-        <p><strong>bildr</strong> is a HTML5 web application built with a Ruby and Sinatra back-end and a MaterializeCSS front-end. bildr was created to allow for easy and quick creation of item sets outside of the League of Legends client while providing more information than the client’s item set builder, such as item efficiency statisitics. This application was made as a submission for the <a href="https://developer.riotgames.com/discussion/announcements/show/2lxEyIcE">Riot Games API Challenge 2.0</a>.</p>
-        <p>The site can be viewed at <a href="http://bildr.co">bildr.co</a>.</p>
-        <h2><a id="Installation_and_Setup_6"></a>Installation and Set-up</h2>
-        <p><strong><em>If you want to run the app locally.</em></strong>
-        </p>
-        <h3><a id="Prerequisites_10"></a>Prerequisites</h3>
-        <ol>
-            <li>Ruby</li>
-            <li>Bundler</li>
-            <li>A Riot Games API key</li>
-        </ol>
-        <h3><a id="Setup_16"></a>Set-up</h3>
-        <ol>
-            <li>First clone the repository with <code>git clone https://github.com/jacobnisnevich/item-set-builder.git</code>
-            </li>
-            <li>Navigate to the cloned directory with <code>cd item-set-builder/</code>
-            </li>
-            <li>Run bundler to install the required Ruby gems with <code>bundle install</code>
-            </li>
-            <li>Set up a system environment variable named <code>LOL_KEY</code> and set it equal to your Riot Games API key. If you are using Windows, set the variable in <em>Control Panel | System Properties | Environment Variables</em>. If you are using Linux or OS X simply run <code>export LOL_KEY=&lt;YOUR API KEY&gt;</code>
-            </li>
-        </ol>
-        <h3><a id="Usage_23"></a>Usage</h3>
-        <ol>
-            <li>Start the application with <code>ruby app.rb</code> from the application’s root directory</li>
-            <li>The application can be viewed from any browser at <a href="http://localhost:4567">localhost:4567</a>
-            </li>
-        </ol>
+        <p><strong>bildr</strong> is a HTML5 web application built with a Ruby and Sinatra back-end and a MaterializeCSS front-end. bildr was created to allow for easy and quick creation of item sets outside of the League of Legends client while providing more information than the client’s item set builder, such as item efficiency statistics. This application was made as a submission for the <a href="https://developer.riotgames.com/discussion/announcements/show/2lxEyIcE">Riot Games API Challenge 2.0</a>.</p>
         <h2><a id="Features_and_Functionality_28"></a>Features and Functionality</h2>
         <h3><a id="Upload_Item_Sets_30"></a>Upload Item Sets</h3>
         <p><strong>bildr</strong> lets you use previously saved League of Legends item sets as templates or starting points for further item set customization. To use a previously created item set navigate to:</p>
