--- a/public/index.html
+++ b/public/index.html
@@ -218,8 +218,10 @@
                                 </div> 
                                 <div id="all-items-container" class="col s12">
                                     <div class="clearfix">
-                                        <img class="filter-items-button" src="images/icons/filter.png">
-                                        <div style="width: 85%; float: left"><input placeholder="Search for item" id="item-search-box" type="text"></div>
+                                        <div class="clearfix" style="width: 10%; float: left">
+                                            <img class="filter-items-button" src="images/icons/filter.png">
+                                        </div>
+                                        <div style="width: 90%; float: left"><input placeholder="Search for item" id="item-search-box" type="text"></div>
                                     </div>
                                     <div class="filter-menu grey lighten-3 z-depth-4">
                                         <form class="filter-form" action="#">
